--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-------------------------------------------------------------HEADER------------------------------------------------------------>
     <header>
             <!--Logo-->
-            <a id="logo" href="index.html"><img src="billeder/dolleruplogo.png" width="50%" alt="Dollerup bakker"></a>
+            <img id="logo" src="billeder/dolleruplogo.png" alt="dollerup bakker logo">
         
             <!--Knapperne i headeren-->  
             <nav>
@@ -29,7 +29,7 @@
                             <a href="#">OVERNATNING</a>
                                 <div class="dropdown-content">
                                     <span>
-                                        <br><a href="#">Shelterpladsen v. Hald</a><br> <br>
+                                        <br><a href="overnat.html">Shelterpladsen v. Hald</a><br> <br>
                                     </span>
                                     <span>
                                         <a href="#">Lejrplads Hald sø</a><br><br>
@@ -56,7 +56,7 @@
                             <a href="#">BADESTEDER</a>
                                 <div class="dropdown-content">
                                     <span>
-                                        <br><a href="#">Dollerup badebro</a><br><br>
+                                        <br><a href="bade.html">Dollerup badebro</a><br><br>
                                     </span>
                                     <span>
                                         <a href="#">Skytteholm</a><br><br>
@@ -78,15 +78,15 @@
                     <div class="menu-items">
                     <a href="index.html"> <img id="burgerlogo" src="billeder/dolleruplogo.png"></a>
                       <li><a href="#">OVERNATNING</a></li>
-                      <li><a class="ddc" href="#">Shelterpladsen v. Hald</a></li>
+                      <li><a class="ddc" href="overnat.html">Shelterpladsen v. Hald</a></li>
                       <li><a class="ddc" href="#">Lejrplads Hald sø</a></li></br></br>
 
                       <li><a href="#">RUTER</a></li>
-                      <li><a class="ddc" href="#">Inderøen</a></li>
+                      <li><a class="ddc" href="rute.html">Inderøen</a></li>
                       <li><a class="ddc" href="#">Hald sø rundt</a></li></br></br>
 
                       <li><a href="#">BADESTEDER</a></li>
-                      <li><a class="ddc" href="#">Dollerup badebro</a></li>
+                      <li><a class="ddc" href="bade.html">Dollerup badebro</a></li>
                       <li><a class="ddc" href="#">Skytteholm</a></li>
                     </div>
                   </div>
@@ -96,20 +96,19 @@
     <!------------------------------------------------------------MAIN---------------------------------------------------------->
     <main>
         <img class="introbilledeL" src="billeder/forside.jpg" alt="dollerup bakker landskab">
+        <img class="introbilledeM" src="billeder/forsidelille.jpg" alt="dollerup bakker landskab">
 
         
         <div>
             <section class="grøntekstboks">
                 <h1>DOLLERUP BAKKER</h1>
                 <br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
-                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
-                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
-                    mollit anim id est laborum.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                    dolore magna aliqua. Ut enim ad minim venuptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur 
-                    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Velkommen til Dollerup bakker! Kom og oplev hvordan istiden har formet det bakkede landskab omkring Dollerup. <br><br>
+
+                    Dollerup bakker er et smukt naturområde som byder på mange skønne naturoplevelser. Tag en afstressende vandretur 
+                    på en af de mange ruter, og hør hvordan fuglesangen fylder trætoppene, eller tag en overnatning under stjernerne 
+                    på en af lejrpladserne omkring Dollerup, eller svøm en frisk tur i Hald sø. 
+                    </p>
             </section>
         </div>
 
@@ -118,16 +117,16 @@
 
         <div class="trebilleder">
             <div>
-                <h2>INDERØEN RUNDT</h2>
-                <a href="#">
+                <h2>INDERØEN <br> RUNDT</h2>
+                <a href="rute.html">
                     <div class="zoom">
                         <img class="kvadrat3" src="billeder/rutekvadratdark.jpg" alt="dollerup bakker rute">
                     </div>
                 </a>
             </div>
             <div>
-                <h2>HALD SØ BADEBRO</h2>
-                <a href="#">
+                <h2>HALD SØ <br> BADEBRO</h2>
+                <a href="bade.html">
                     <div class="zoom">
                         <img class="kvadrat3" src="billeder/badekvadratdark.jpg" alt="dollerup bakker badebroen">
                     </div>
@@ -135,7 +134,7 @@
             </div>
             <div>
                 <h2>HALD SHELTERPLADS</h2>
-                <a href="#">
+                <a href="overnat.html">
                     <div class="zoom">
                         <img class="kvadrat3" src="billeder/overnatkvadratdark.jpg" alt="hald shelterplads">
                     </div>
