--- a/bade.html
+++ b/bade.html
@@ -17,8 +17,9 @@
 <body>
         <!-------------------------------------------------------------HEADER------------------------------------------------------------>
         <header>
-            <!--Logo-->
-            <a id="logo" href="index.html"><img src="billeder/dolleruplogo.png" alt="Dollerup bakker"></a>
+            <div class="headerdiv">
+                <!--Logo-->
+                <a href="index.html"><div id="logo"><img src="billeder/dolleruplogo.png" alt="dollerup bakker logo"></div></a>
         
             <!--Knapperne i headeren-->  
             <nav>
@@ -104,14 +105,15 @@
                     Vandet omkring broen er forholdsvis lavvandet og her er god mulighed for både børn og voksne at plaske rundt. Fra broen er det muligt at hoppe på dit paddelboard, i din kajak eller ligne. 
                     <br> <br>
                     Hald sø er Danmarks tredje dybeste sø, med en dybde på 31 meter på det dybeste sted. Derfor skal man, når man svømmer, være opmærksom på at vandet hurtigt bliver meget koldt, desto længere ud man kommer, og at der derfor er risiko for at få krampe.
-                    <br> <br>
-                    Pladsen indeholder: <br>
-                    •	Badebro <br>
-                    •	Bålsted <br>
-                    •	Bordbænke sæt <br>
-                    •	Skraldespande <br>
-                    •	Parkeringsplads <br>
-                    </p>
+                    </p><br> <br> <br>
+                    <h3>Pladsen indeholder: </h3><br>
+                    <ul>
+                        <li>Badebro</li>
+                        <li>Bålsted</li>
+                        <li>Bordbænke sæt</li>
+                        <li>Skraldespande</li>
+                        <li>Parkeringsplads</li>
+                    </ul>
             </section>
         </div>
 
