--- a/overnat.html
+++ b/overnat.html
@@ -17,9 +17,10 @@
 <body>
         <!-------------------------------------------------------------HEADER------------------------------------------------------------>
         <header>
-            <!--Logo-->
-            <a id="logo" href="index.html"><img src="billeder/dolleruplogo.png" alt="Dollerup bakker"></a>
-        
+            <div class="headerdiv">
+                <!--Logo-->
+                <a href="index.html"><div id="logo"><img src="billeder/dolleruplogo.png" alt="dollerup bakker logo"></div></a>
+
             <!--Knapperne i headeren-->  
             <nav>
                         <div class="dropdown">
@@ -101,19 +102,21 @@
                 <h1>SHELTERPLADSEN VED HALD</h1>
                 <br>
                 <p>Shelterpladsen ved Hald er en af de større shelterpladser. Her er fire shelters med plads til seks i hver. 
-                    På pladsen er der flere bålsteder, bordebænke sæt og madpakkehus. For Viborgs kommunes kommunale skoler og 
+                    På pladsen er der flere bålsteder, bordebænke sæt og et madpakkehus. For Viborgs kommunes kommunale skoler og 
                     institutioner er det gratis at benytte shelterpladsen. <br>
-                    HUSK at booke et shelter <a href="#">her</a>
+                    HUSK at booke et shelter <a href="#">her</a></p>
                     <br><br>
-                    Praktisk info: <br>
-                    •	Parkering: pladsen ligger ca. 300 fra Naturskolen med mulighed for parkering <br>
-                    •	Bad: der er ingen bademuligheder, men hop en tur i Hald sø i stedet <br>
-                    •	Toiletter: der er et muldtoilet på shelterpladsen og ellers kan man låne de offentlige toiletter ved Naturskolen <br>
-                    •	Vand: der er en vandhane på pladsen <br>
-                    •	Brænde: der er mulighed for at købe brænde i Længen ved Naturskolen <br>
-                    •	Bål: der er flere bålsteder og en flytbar bålrist <br>
-                    •	Betaling: via mobilepay på pladsen ved brug
-                    </p>
+
+                    <h3>Praktisk info: </h3><br>
+                    <ul>
+                        <li>Parkering: pladsen ligger ca. 300 fra Naturskolen med mulighed for parkering</li>
+                        <li>Bad: der er ingen bademuligheder, men hop en tur i Hald sø i stedet</li>
+                        <li>Toiletter: der er et muldtoilet på shelterpladsen og ellers kan man låne de offentlige toiletter ved Naturskolen</li>
+                        <li>Vand: der er en vandhane på pladsen</li>
+                        <li>Brænde: der er mulighed for at købe brænde i Længen ved Naturskolen</li>
+                        <li>Bål: der er flere bålsteder og en flytbar bålrist</li>
+                        <li>Betaling: via mobilepay på pladsen ved brug</li>
+                    </ul>
             </section>
         </div>
 
