--- a/rute.html
+++ b/rute.html
@@ -18,9 +18,10 @@
 <body>
     <!-------------------------------------------------------------HEADER------------------------------------------------------------>
     <header>
-        <!--Logo-->
-        <a id="logo" href="index.html"><img src="billeder/dolleruplogo.png" alt="Dollerup bakker"></a>
-    
+        <div class="headerdiv">
+            <!--Logo-->
+            <a href="index.html"><div id="logo"><img src="billeder/dolleruplogo.png" alt="dollerup bakker logo"></div></a>
+
         <!--Knapperne i headeren-->  
         <nav>
                     <div class="dropdown">
