--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </header>
     <!------------------------------------------------------------MAIN---------------------------------------------------------->
     <main>
-        <img class="introbilledeL" src="billeder/forside.jpg" alt="dollerup bakker landskab">
+        <video src="billeder/dollerupbakker.mp4" autoplay loop ></video>
         <img class="introbilledeM" src="billeder/forsidelille.jpg" alt="dollerup bakker landskab">
 
         
