--- a/bade.html
+++ b/bade.html
@@ -67,7 +67,7 @@
             <nav id="burgermenu">
                 <div class="navbar">
                   <div class="container nav-container">
-                      <input class="checkbox" type="checkbox" name="" id="" />
+                      <input class="checkbox" type="checkbox"/>
                       <div class="hamburger-lines">
                         <span class="line line1"></span>
                         <span class="line line2"></span>
@@ -107,13 +107,16 @@
                     Hald sø er Danmarks tredje dybeste sø, med en dybde på 31 meter på det dybeste sted. Derfor skal man, når man svømmer, være opmærksom på at vandet hurtigt bliver meget koldt, desto længere ud man kommer, og at der derfor er risiko for at få krampe.
                     </p><br> <br> <br>
                     <h3>Pladsen indeholder: </h3><br>
-                    <ul>
+                    <ul class="punkter">
                         <li>Badebro</li>
                         <li>Bålsted</li>
                         <li>Bordbænke sæt</li>
                         <li>Skraldespande</li>
                         <li>Parkeringsplads</li>
                     </ul>
+                <div class="kortboks">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2488.9452705171234!2d9.330743977005003!3d56.367125744507206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464bef35fbce9877%3A0x4e6e6815b374db0e!2sDollerup%20badebro%20syd!5e1!3m2!1sda!2sdk!4v1684484821205!5m2!1sda!2sdk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </section>
         </div>
 
@@ -123,5 +126,23 @@
             <img class="kvadrat2" src="billeder/badekvadrat3.jpg" alt="dollerup bakker badebro">
         </div>
     </main>
+
+    <footer>
+        <div class="footerboks">
+            <h4>Følg os</h4>
+            <br>
+            <div class="socialemedier">
+                <i style="font-size:30px" class="fa">&#xf16d;</i>
+                <i style="font-size:30px" class="fa">&#xf09a;</i>
+            </div>
+        </div>
+        <div class="footerboks">
+            <h4>Kontakt os</h4>
+            <br>
+            <div class="socialemedier">
+                <p class="tekstfooter">Tlf: 67 32 40 61 <br> Dollerupbakker@db.dk</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
