--- a/index.html
+++ b/index.html
@@ -152,14 +152,22 @@
     </main>
 <!---------------------------------------------------------------FOOTER------------------------------------------------------------>
     <footer>
-        <div class="tekstsocialikon">
-            <h4>Følg os her</h4>
+        <div class="footerboks">
+            <h4>Følg os</h4>
             <br>
             <div class="socialemedier">
-                    <i style="font-size:40px" class="fa">&#xf16d;</i>
-                    <i style="font-size:40px" class="fa">&#xf09a;</i>
+                <i style="font-size:30px" class="fa">&#xf16d;</i>
+                <i style="font-size:30px" class="fa">&#xf09a;</i>
             </div>
         </div>
+        <div class="footerboks">
+            <h4>Kontakt os</h4>
+            <br>
+            <div class="socialemedier">
+                <p class="tekstfooter">Tlf: 67 32 40 61 <br> Dollerupbakker@db.dk</p>
+            </div>
+        </div>
+
     </footer>
 
 
