--- a/overnat.html
+++ b/overnat.html
@@ -108,7 +108,7 @@
                     <br><br>
 
                     <h3>Praktisk info: </h3><br>
-                    <ul>
+                    <ul class="punkter">
                         <li>Parkering: pladsen ligger ca. 300 fra Naturskolen med mulighed for parkering</li>
                         <li>Bad: der er ingen bademuligheder, men hop en tur i Hald sø i stedet</li>
                         <li>Toiletter: der er et muldtoilet på shelterpladsen og ellers kan man låne de offentlige toiletter ved Naturskolen</li>
@@ -116,9 +116,16 @@
                         <li>Brænde: der er mulighed for at købe brænde i Længen ved Naturskolen</li>
                         <li>Bål: der er flere bålsteder og en flytbar bålrist</li>
                         <li>Betaling: via mobilepay på pladsen ved brug</li>
+                        <li>Indkøbsmuligheder: den nærmeste dagligvarebutik er Skelhøje købmandsbutik, Volden 2, 7470 Viborg. Ellers er der
+                             Dollerup ishus, Ravnsbjergvej 70, 8800 Viborg. Her er der mulighed for at få både is og grillmad. </li>
                     </ul>
+
+                <div class="kortboks">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1243.7053015017632!2d9.337498606917729!3d56.39062377271266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sda!2sdk!4v1684484595053!5m2!1sda!2sdk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </section>
         </div>
+
 
         <!------------------De to billeder--------------->
         <div class="tobilleder">
@@ -126,5 +133,22 @@
             <img class="kvadrat2" src="billeder/overnatkvadrat3.jpg" alt="dollerup bakker overnatning">
         </div>
     </main>
+    <footer>
+        <div class="footerboks">
+            <h4>Følg os</h4>
+            <br>
+            <div class="socialemedier">
+                <i style="font-size:30px" class="fa">&#xf16d;</i>
+                <i style="font-size:30px" class="fa">&#xf09a;</i>
+            </div>
+        </div>
+        <div class="footerboks">
+            <h4>Kontakt os</h4>
+            <br>
+            <div class="socialemedier">
+                <p class="tekstfooter">Tlf: 67 32 40 61 <br> Dollerupbakker@db.dk</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
