--- a/rute.html
+++ b/rute.html
@@ -121,7 +121,7 @@
                     <p>Start ruten på Ravnsbjergvej. Her kan du parkere din bil på en mindre parkeringsplads, lige ud 
                         for inderøen. Allerede på den anden side af vejen begynder ruten – du kan se den fra parkeringspladsen.
                          Du bestemmer helt selv om du går højre eller venstre om halvøen. Begge veje er smukke og giver to unikke
-                          vinkler på ruten. Når du har valgt en retning, følger du ellers bare stien. Se evt. kortet nederst på siden. <br> <br>
+                          vinkler på ruten. Når du har valgt en retning, følger du ellers bare stien. Se evt. kortet længere nede på siden. <br> <br>
                         Der er flere steder på ruten placeret bænke, så du har mulighed for at tage en lille pause eller bare nyde
                          udsigten.
                         </p>
@@ -133,6 +133,26 @@
                 <img class="kvadrat2" src="billeder/rutekvadrat2.jpg" alt="dollerup bakker rute">
                 <img class="kvadrat2" src="billeder/rutekvadrat3.jpg" alt="dollerup bakker rute">
             </div>
+
+            <img class="introbilledeL" src="billeder/kortrutestor.jpg" alt="dollerup bakker rute">
+            <img class="introbilledeM" src="billeder/kortrutelille.jpg" alt="dollerup bakker ruter">
         </main>
+        <footer>
+            <div class="footerboks">
+                <h4>Følg os</h4>
+                <br>
+                <div class="socialemedier">
+                    <i style="font-size:30px" class="fa">&#xf16d;</i>
+                    <i style="font-size:30px" class="fa">&#xf09a;</i>
+                </div>
+            </div>
+            <div class="footerboks">
+                <h4>Kontakt os</h4>
+                <br>
+                <div class="socialemedier">
+                    <p class="tekstfooter">Tlf: 67 32 40 61 <br> Dollerupbakker@db.dk</p>
+                </div>
+            </div>
+        </footer>
 </body>
 </html>
