--- a/bade.html
+++ b/bade.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velkommen til dollerup bakker/badebro</title>
     <meta name="Badebroen ved Hald sø" content="Velkommen til Dollerup badebroen. Her kan du finde information om badebroen, Hald sø og området omkring samt billeder deraf">
-    <meta name="keywords" content="natur, løvskov, skov, hald sø, vand, sø, badebro, bålplads, praktisk information, aktiviteter, inspiration">
+    <meta name="keywords" content="natur, løvskov, skov, hald sø, vand, sø, badebro, bålplads, praktisk information, aktiviteter, outdoor, inspiration">
 
      <!--Link til stylesheet-->
      <link rel="stylesheet" href="stylesheet.css">
