--- a/index.html
+++ b/index.html
@@ -110,10 +110,9 @@
     </header>
     <!------------------------------------------------------------MAIN---------------------------------------------------------->
     <main>
-        <video src="billeder/dollerupbakker.mp4" autoplay loop ></video>
+        <video src="billeder/dollerupbakkervideo.mp4" autoplay loop ></video>
         <img class="introbilledeM" src="billeder/forsidelille.jpg" alt="dollerup bakker landskab">
 
-        
 
         <div class="grøntekstboks">
             <h1>DOLLERUP BAKKER</h1>
@@ -130,24 +129,24 @@
 
         <div class="trebilleder">
             <div>
-                <h2>INDERØEN <br> RUNDT</h2>
                 <a href="rute.html">
+                    <h2>INDERØEN <br> RUNDT</h2>
                     <div class="zoom">
                         <img class="kvadrat3" src="billeder/rutekvadratdark.jpg" alt="dollerup bakker rute">
                     </div>
                 </a>
             </div>
             <div>
-                <h2>HALD SØ <br> BADEBRO</h2>
                 <a href="bade.html">
+                    <h2>HALD SØ <br> BADEBRO</h2>
                     <div class="zoom">
                         <img class="kvadrat3" src="billeder/badekvadratdark.jpg" alt="dollerup bakker badebroen">
                     </div>
                 </a>
             </div>
             <div>
-                <h2>HALD SHELTERPLADS</h2>
                 <a href="overnat.html">
+                    <h2>HALD SHELTERPLADS</h2>
                     <div class="zoom">
                         <img class="kvadrat3" src="billeder/overnatkvadratdark.jpg" alt="hald shelterplads">
                     </div>
