--- a/overnat.html
+++ b/overnat.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velkommen til dollerup bakker/overnatning</title>
     <meta name="Shelterpladsen ved Hald" content="Velkommen til shelterpladsen ved Hald. Her kan du finde information og billeder af shelterpladsen ved Hald, samt et kort over lejrpladsen">
-    <meta name="keywords" content="natur, løvskov, skov, hald, lejrplads, bålplads, shelterplads, bålsted, praktisk information, aktiviteter, inspiration">
+    <meta name="keywords" content="natur, løvskov, skov, hald, lejrplads, bålplads, shelterplads, bålsted, outdoor, praktisk information, aktiviteter, inspiration">
 
      <!--Link til stylesheet-->
      <link rel="stylesheet" href="stylesheet.css">
