--- a/rute.html
+++ b/rute.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velkommen til dollerup bakker/ruter</title>
     <meta name="Vandrerute om inderøen" content="Velkommen til vandreruten omkring inderøen. Her kan du finde information om terrænet, parkering, et kort over ruten, samt billeder deraf">
-    <meta name="keywords" content="natur, løvskov, skov, hald sø, inderøen, sø, vandkant, praktisk information, aktiviteter, inspiration, vandrerute">
+    <meta name="keywords" content="natur, løvskov, skov, hald sø, inderøen, sø, vandkant, praktisk information, aktiviteter, outdoor, inspiration, vandrerute">
 
     <!--Link til stylesheet-->
     <link rel="stylesheet" href="stylesheet.css">
