--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <!--Link til ikoner for sociale medier-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
@@ -26,7 +27,7 @@
         <div class="headerdiv">
             <!--Logo-->
             <div id="logo">
-                <a href="index.html"><img src="billeder/dolleruplogo.png" alt="dollerup bakker logo"></a>
+                <a  href="index.html"><img id="logob" src="billeder/logodollerupny.png" alt="dollerup bakker logo"></a>
             </div>
         
             <!--Knapperne i headeren--> 
@@ -78,7 +79,7 @@
             <nav id="burgermenu">
                 <div class="navbar">
                   <div class="container nav-container">
-                      <input class="checkbox" type="checkbox" />
+                      <input class="checkbox" type="checkbox" title="checkbox"/>
                         <div class="hamburger-lines">
                             <span class="line line1"></span>
                             <span class="line line2"></span>
@@ -86,7 +87,7 @@
                         </div>  
                 
                         <div class="menu-items">
-                            <a href="index.html"> <img id="burgerlogo" src="billeder/dolleruplogo.png" alt="logo dollerup bakker"></a>
+                            <a href="index.html"> <img id="burgerlogo" src="billeder/logodollerupny.png" alt="logo dollerup bakker"></a>
                             <ul>
                                 <li><a href="#">OVERNATNING</a></li>
                                 <li><a class="ddc" href="overnat.html">Shelterpladsen v. Hald</a></li>
@@ -146,7 +147,7 @@
             </div>
             <div>
                 <a href="overnat.html">
-                    <h2>HALD SHELTERPLADS</h2>
+                    <h2>HALD SHELTERS</h2>
                     <div class="zoom">
                         <img class="kvadrat3" src="billeder/overnatkvadratdark.jpg" alt="hald shelterplads">
                     </div>
@@ -161,8 +162,8 @@
             <h4>Følg os</h4>
             <br>
             <div class="socialemedier">
-                <i style="font-size:30px" class="fa">&#xf16d;</i>
-                <i style="font-size:30px" class="fa">&#xf09a;</i>
+                <i class="fa fa-instagram" style="font-size:36px"></i>
+                <i class="fa fa-facebook-f" style="font-size:36px"></i>
             </div>
         </div>
         <div class="footerboks">
