--- a/bade.html
+++ b/bade.html
@@ -17,7 +17,7 @@
      <!--Link til ikoner for sociale medier-->
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-     
+
 </head>
 <body>
         <!-------------------------------------------------------------HEADER------------------------------------------------------------>
@@ -114,9 +114,10 @@
             <h1>HALD SØ BADEBRO</h1>
             <br>
             <p>Spring i det klare vand fra badebroen ved Hald sø. 
-                Vandet omkring broen er forholdsvis lavvandet og her er god mulighed for både børn 
-                og voksne at plaske rundt. Fra broen er det muligt at hoppe på dit paddelboard, i 
-                din kajak eller ligne. 
+                Badestedet omkring broen er forholdsvis lavvandet og her er god mulighed for både børn og voksne at plaske rundt.
+                 Søbredden består af sand og græs, men fra broen er det muligt at hoppe på sit paddelboard, i sin kajak eller ligne
+                  uden besvær. Om sommeren er ligger vandtemperaturen på omkring 13-21grader.
+
                 <br> <br>
                 Hald sø er Danmarks tredje dybeste sø, med en dybde på 31 meter på det dybeste 
                 sted. Derfor skal man, når man svømmer, være opmærksom på at vandet hurtigt bliver 
